tests/parse/ui/simple_imply.stderr
error[E0308]: mismatched types
 --> $DIR/simple_imply.rs:5:15
  |
5 | #[requires="  12345 ==> true"]
  |               ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
 --> $DIR/simple_imply.rs:8:30
  |
8 | #[requires="  true      ==>  12345 "]
  |                              ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:11:35
   |
11 | #[requires="  true  ==>  (true && 12345 && true)"]
   |                                   ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:14:35
   |
14 | #[requires="  true  ==>  (true && 12345 ==> true)"]
   |                                   ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:17:35
   |
17 | #[requires="  true  ==>  (true && 12345 ==> true && 12345)"]
   |                                   ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:17:53
   |
17 | #[requires="  true  ==>  (true && 12345 ==> true && 12345)"]
   |                                                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

thread 'rustc' panicked at 'not yet implemented', src/typeck.rs:57:21
note: Run with `RUST_BACKTRACE=1` for a backtrace.
thread 'main' panicked at 'rustc_thread failed: Any', libcore/result.rs:916:5
